chore: Added a test for my S7-1500 opcua setup and did some minor tweaks to support reading and writing most types on this PLC.